[gd_scene load_steps=10 format=3 uid="uid://beql60mlyuv4k"]

[ext_resource type="Texture2D" uid="uid://1fscyq5ab7vs" path="res://ArtAssets/Gear8.png" id="1_5none"]
[ext_resource type="Script" uid="uid://cusf7tjg3t8cd" path="res://Scripts/StartMenu.gd" id="1_23ta6"]
[ext_resource type="FontFile" uid="uid://d3v5hwuptmihs" path="res://Fonts/The Centurion.otf" id="2_23ta6"]
[ext_resource type="Texture2D" uid="uid://ch7opmftlw7ab" path="res://ArtAssets/Gear5Center.png" id="3_5none"]
[ext_resource type="Script" uid="uid://bbj16j63n61ky" path="res://Scripts/StartMenu_GearText.gd" id="4_vgvn6"]
[ext_resource type="AudioStream" uid="uid://b7u7ygayctg1f" path="res://Music/MainMenu.mp3" id="6_wom42"]
[ext_resource type="AudioStream" uid="uid://1j3lgn0exnqd" path="res://SoundEffects/Loop Mechanic-Menu Gear 1.mp3" id="7_86ygf"]
[ext_resource type="AudioStream" uid="uid://di8sfk3qheop" path="res://SoundEffects/Loop Mechanic-Menu Gear 2.mp3" id="8_346e6"]
[ext_resource type="AudioStream" uid="uid://dqi62a6fm6a3y" path="res://SoundEffects/Loop Mechanic-Menu Click.mp3" id="9_tfsc1"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_23ta6")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Gear8" type="Sprite2D" parent="Control"]
position = Vector2(233, 262)
texture = ExtResource("1_5none")

[node name="Label_Title" type="Label" parent="Control/Gear8"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -242.0
offset_top = -271.5
offset_right = 244.0
offset_bottom = -189.5
grow_vertical = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_23ta6")
theme_override_font_sizes/font_size = 44
text = "LOOP-MECHANIC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gear82" type="Sprite2D" parent="Control"]
position = Vector2(941, 365)
texture = ExtResource("1_5none")

[node name="Label_Title" type="Label" parent="Control/Gear82"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -242.0
offset_top = -271.5
offset_right = 244.0
offset_bottom = -189.5
grow_vertical = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_23ta6")
theme_override_font_sizes/font_size = 44
text = "LOOP-MECHANIC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gear5" type="Sprite2D" parent="Control"]
position = Vector2(577, 357)
texture = ExtResource("3_5none")
script = ExtResource("4_vgvn6")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_wom42")
autoplay = true
parameters/looping = true

[node name="SoundEffectRotate1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_86ygf")
volume_db = -5.0

[node name="SoundEffectRotate2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_346e6")
volume_db = -5.0

[node name="SoundEffectClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_tfsc1")
volume_db = 10.0
